# travel-tool

./: .cursorrules  .gitignore  .windsurfrules  ARCHITECTURE.md  COMMANDS.md  README.md  TODO  TODO.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.cursor/rules/: .cursorrules  travel-tool.mdc
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/api/: analyze.py  auth.py  config.py  content.py  deps.py  favorites.py  plans.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  favorite.py  itinerary.py  user.py
backend/app/schemas/: __init__.py  content.py  favorite.py  itinerary.py  user.py
backend/app/services/: __init__.py
backend/app/services/content/: __init__.py
backend/app/services/llm/: __init__.py  data_sources.py  interfaces.py  main.py  models.py  pipeline.py  processor.py  prompts.py  volcengine_provider.py
backend/app/services/sources/: __init__.py  amap.py  base.py  xiaohongshu.py
backend/scrapers/: README.md  __init__.py
backend/scrapers/integration/: __init__.py  service.py
backend/scrapers/xhs/: __init__.py  adapter.py  config.py  models.py
docs/: ARCHITECTURE.md  BACKEND_API.md  COMMANDS.md  LLM_PIPELINE_FLOW.md  README.md  TODO.md  开发参考文档.md
src/: App.tsx  index.css  types.ts
src/components/auth/: AuthModal.tsx  PlansModal.tsx  UserMenu.tsx  index.ts
src/services/: llmService.ts  mapService.ts
src/store/: authStore.ts  tripStore.ts
src/types/: amap.d.ts  index.ts
src/utils/: demoData.ts
(+29 files in other folders)
